syntax = "proto3";
package bluzelle.curium.nft;

import "cosmos/base/v1beta1/coin.proto";
import "gogoproto/gogo.proto";
import "nft/nft.proto";

option go_package = "github.com/bluzelle/bluzelle-public/curium/x/nft/types";
option (gogoproto.goproto_getters_all) = false;

// Msg defines the Msg service
service Msg {
  rpc CreateNFT(MsgCreateNFT) returns (MsgCreateNFTResponse);
  rpc PrintEdition(MsgPrintEdition) returns (MsgPrintEditionResponse);
  rpc TransferNFT(MsgTransferNFT) returns (MsgTransferNFTResponse);

  rpc SignMetadata(MsgSignMetadata) returns (MsgSignMetadataResponse);
  rpc UpdateMetadata(MsgUpdateMetadata) returns (MsgUpdateMetadataResponse);
  rpc UpdateMetadataAuthority(MsgUpdateMetadataAuthority) returns (MsgUpdateMetadataAuthorityResponse);
  rpc UpdateMintAuthority(MsgUpdateMintAuthority) returns (MsgUpdateMintAuthorityResponse);

  rpc CreateCollection(MsgCreateCollection) returns (MsgCreateCollectionResponse);
  rpc UpdateCollectionAuthority(MsgUpdateCollectionAuthority) returns (MsgUpdateCollectionAuthorityResponse);

  rpc UpdateCollectionUri(MsgUpdateCollectionUri) returns (MsgUpdateCollectionUriResponse);
  rpc UpdateCollectionMutableUri(MsgUpdateCollectionMutableUri) returns (MsgUpdateCollectionMutableUriResponse);

  rpc MultiSendNFT(MsgMultiSendNFT) returns (MsgMultiSendNFTResponse);
}

message MsgCreateNFT {
  string sender = 1;
  uint64 coll_id = 2;
  bluzelle.curium.nft.Metadata metadata = 3 [ (gogoproto.nullable) = false ];
}
message MsgCreateNFTResponse {
  string id = 1;
  uint64 metadata_id = 2;
}

message MsgPrintEdition {
  string sender = 1;
  uint64 coll_id = 2;
  uint64 metadata_id = 3;
  string owner = 4;
}
message MsgPrintEditionResponse {
  string id = 1;
  uint64 metadata_id = 2;
}

message MsgTransferNFT {
  string sender = 1;
  string id = 2;
  string new_owner = 3;
}
message MsgTransferNFTResponse {}

message MsgSignMetadata {
  string sender = 1;
  uint64 metadata_id = 2;
}
message MsgSignMetadataResponse {}

message MsgUpdateMetadata {
  string sender = 1;
  uint64 metadata_id = 2;
  // The name of the asset
  string name = 3;
  // URI pointing to JSON representing the asset
  string uri = 4;
  // URI pointing to a mutable value, like a url
  string mutable_uri = 5;
  // Royalty basis points that goes to creators in secondary sales (0-10000)
  uint32 seller_fee_basis_points = 6;
  // Array of creators, optional
  repeated bluzelle.curium.nft.Creator creators = 7
      [ (gogoproto.nullable) = false ];
}
message MsgUpdateMetadataResponse {}

message MsgUpdateMetadataAuthority {
  string sender = 1;
  uint64 metadata_id = 2;
  string new_authority = 3;
}
message MsgUpdateMetadataAuthorityResponse {}

message MsgUpdateMintAuthority {
  string sender = 1;
  uint64 metadata_id = 2;
  string new_authority = 3;
}
message MsgUpdateMintAuthorityResponse {}

message MsgCreateCollection {
  string sender = 1;
  string symbol = 2;
  string name = 3;
  string uri = 4;
  string mutable_uri = 5;
  bool is_mutable = 6;
  string update_authority = 7;
}
message MsgCreateCollectionResponse {
    uint64 id = 1;
}

message MsgUpdateCollectionAuthority {
  string sender = 1;
  uint64 collection_id = 2;
  string new_authority = 3;
}
message MsgUpdateCollectionAuthorityResponse {}

message MsgUpdateCollectionUri {
  string sender = 1;
  uint64 collection_id = 2;
  string uri = 3;
}

message MsgUpdateCollectionUriResponse {}

message MsgUpdateCollectionMutableUri {
  string sender = 1;
  uint64 collection_id = 2;
  string uri = 3;
}

message MsgUpdateCollectionMutableUriResponse {}

message MsgMultiSendNFT {
  string sender = 1;
  repeated bluzelle.curium.nft.MultiSendNFTOutput multi_send_outputs = 2;
}

message MsgMultiSendNFTResponse {}